feat: add image classification logic

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -10,6 +10,5 @@
             "path": "https://storage.googleapis.com/ai-sprint-2024/mediapipe-models/image-classifier/vision-classifier-food-v1.tflite"
         }
     ],
-    "maxResults": 3,
-    "runningMode": "IMAGE"
+    "maxResults": 3
 }
